<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_ShowActivityUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_menuitem_users"
        />
    <Button
        android:id="@+id/btn_ShowActivityLanguages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_menuitem_languages"
        />
    <Button
        android:id="@+id/btn_ShowActivitySync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_menuitem_sync"
        />
    <Button
        android:id="@+id/btn_ShowActivitySettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_menuitem_settings"
        />

</LinearLayout>

